chore: mess up, adding modifications missing in previous commits.

--- a/Module1_MLFlow/mlflow_quickstart/tracking_quickstart.ipynb
+++ b/Module1_MLFlow/mlflow_quickstart/tracking_quickstart.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\manon\\Documents\\20_MonteeCompetences\\Coursera_MLOps\\Coursera_DukeMLOpsSpecialization_MLFlowAndHuggingFace\\Module1_MLFlow\\.venv\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1272: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.8. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the Iris dataset\n",
     "X, y = datasets.load_iris(return_X_y=True)\n",
@@ -105,16 +114,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/09/15 15:28:33 INFO mlflow.tracking.fluent: Experiment with name 'MLflow Quickstart' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='mlflow-artifacts:/846578415685150448', creation_time=1699374480748, experiment_id='846578415685150448', last_update_time=1699374480748, lifecycle_stage='active', name='MLflow Quickstart', tags={}>"
+       "<Experiment: artifact_location='mlflow-artifacts:/819211084261661477', creation_time=1757942913137, experiment_id='819211084261661477', last_update_time=1757942913137, lifecycle_stage='active', name='MLflow Quickstart', tags={}>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,18 +150,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/benjamin.wilson/miniconda3/envs/mlflow-dev-env/lib/python3.8/site-packages/_distutils_hack/__init__.py:30: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
-      "Registered model 'tracking-quickstart' already exists. Creating a new version of this model...\n",
-      "2023/11/07 12:17:01 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking-quickstart, version 3\n",
-      "Created version '3' of model 'tracking-quickstart'.\n"
+      "Successfully registered model 'tracking-quickstart'.\n",
+      "2025/09/15 15:28:43 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking-quickstart, version 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏃 View run adaptable-moose-19 at: http://127.0.0.1:8080/#/experiments/819211084261661477/runs/953df4d6822a4e368c20026d7aca7300\n",
+      "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/819211084261661477\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created version '1' of model 'tracking-quickstart'.\n"
      ]
     }
    ],
@@ -185,24 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62a7ca65428d42baa6f4528e1e7824e8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading artifacts:   0%|          | 0/6 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "loaded_model = mlflow.pyfunc.load_model(model_info.model_uri)"
    ]
@@ -216,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -290,8 +303,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)   \n",
-       "0                6.1               2.8                4.7               1.2  \\\n",
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "0                6.1               2.8                4.7               1.2   \n",
        "1                5.7               3.8                1.7               0.3   \n",
        "2                7.7               2.6                6.9               2.3   \n",
        "3                6.0               2.9                4.5               1.5   \n",
@@ -303,7 +316,7 @@
        "3             1                1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,11 +337,18 @@
     "\n",
     "result[:4]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlflow-dev-env",
+   "display_name": ".venv (3.12.10)",
    "language": "python",
    "name": "python3"
   },
@@ -342,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
